# cplus

./: .cproject  .gdbinit  .gitignore  .project  .vimspector.json  .vimspector.json.back  CMakeLists.txt  README.md  cplus.kdev4  printers.py
.kdev4/: cplus.kdev4
data/: draw.plt
src/: main.cpp  solver.h  solver_opts.h  solvers.h  test.cpp
src/base/: base.h
src/ilqr/: backwardpass.h  cost_expansion.h  dynamics_expansion.h  forwardpass.h  ilqr_solve.h  ilqr_solver.h
src/robot_dynamics/: car_model.h  discrete_dynamics.h  discretized_dynamics.h  dynamics.h  functionbase.h  integration.cpp  integration.h  knotpoint.h  scalar_function.h  statevectortype.h  trajectories.h
src/trajectory_optimization/: abstract_constraint.h  constraint_list.h  cost_function.h  cost_functions.h  dynamics.h  objective.h  problem.h
